chore: Prevent stage text overflow

--- a/styles/Header.module.scss
+++ b/styles/Header.module.scss
@@ -40,6 +40,7 @@
   font-size: 0.9em;
   display: flex;
   align-items: center;
+  font-weight: bold;
 }
 
 .length {
@@ -82,7 +83,7 @@
   }
   .length, .stage {
     font-size: 0.7em;
-    width: 50px;
+    width: 55px;
   }
 }
 
